Initial commit - HoyHoney site

--- a/app/globals.css
+++ b/app/globals.css
@@ -89,3 +89,13 @@
   background: #ee5081;
   color: #000;
 }
+
+/* Hide scrollbar for category slider */
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
